--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 						<article class="box post post-excerpt">
 							<header>
 								<!--
-									Note: Titles and subtitles will wrap automatically when necessary, so don't worry
-									if they get too long. You can also remove the <p> entirely if you don't
-									need a subtitle.
+									probando
 								-->
 								<h2><a href="#">Sistema de registros y control de asistencias del comedor</a></h2>
 								<p>UNIVERSIDAD NACIONAL JORGE BASADRE GROHMANN</p>
