--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<article class="box post post-excerpt">
 							<header>
 								<!--
-									probando
+									probando.....
 								-->
 								<h2><a href="#">Sistema de registros y control de asistencias del comedor</a></h2>
 								<p>UNIVERSIDAD NACIONAL JORGE BASADRE GROHMANN</p>
