--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div id="content">
 				<div class="inner">
 
-					<!-- Post -->
+					<!-- Posttt -->
 						<article class="box post post-excerpt">
 							<header>
 								<!--
