--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
 	<head>
+		<!-- comedor -->
 		<title>UNJBG - COMEDOR</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,7 +12,6 @@
 	</head>
 	<body>
 
-		<!-- Content -->
 			<div id="content">
 				<div class="inner">
 
