--- a/ma_agregar_alumno.html
+++ b/ma_agregar_alumno.html
@@ -4,9 +4,9 @@
 		<title>REGISTRO DE ESTUDIANTES</title>
 		<link rel="stylesheet" type="text/css" href="css/agregar_alumno.css">
 	</head>
-	<body>
+	<body background="images/imagen3.jpg" class="ima" style="background-attachment: fixed">
 		<div class="form">
-			<form action="guardaralumno.php" method="POST">				
+			<form action="ma_agregar_alumno_validar.php" method="POST">				
 				<br>
 				<label for="tarjeta">Numero de tarjeta</label><br>
 				<input type="text" name="tarjeta" placeholder="" required><br><br>
