--- a/admin_menu.html
+++ b/admin_menu.html
@@ -10,7 +10,7 @@
 			<div id="header">
 				<div class="top">
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/logo.png" alt="" /></span>
 							<h1 id="title">UNJBG</h1>
 							<p>ADMINISTRADOR</p>
 						</div>
