--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 							<!--<div class="info">								
 								<span class="date"><span class="month">Junio<span></span></span> <span class="day">14</span><span class="year">, 2017</span></span>				
 							</div>-->
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/uni.jpg" alt="" /></a>
 							<p>
 								<strong>Hola!</strong> Tú estas en la página del <strong>Comedor universitario</strong> de la <a href="http://www.unjbg.edu.pe/portal/">UNIVERSIDAD NACIONAL JORGE BASADRE GROHMANN</a>
 							</p>
