--- a/ma_agregar_alumno.html
+++ b/ma_agregar_alumno.html
@@ -2,16 +2,17 @@
 <html>
 	<head>
 		<title>REGISTRO DE ESTUDIANTES</title>
-		<link rel="stylesheet" type="text/css" href="css/agregar_alumno.css">
+		<link rel="stylesheet" type="text/css" href="css/agregar_alumno2.css">
 	</head>
-	<body background="images/imagen3.jpg" class="ima" style="background-attachment: fixed">
+	<body background="images/13.png" class="ima" style="background-attachment: fixed">
 		<div class="form">
 			<form action="ma_agregar_alumno_validar.php" method="POST">				
 				<br>
-				<label for="tarjeta">Numero de tarjeta</label><br>
-				<input type="text" name="tarjeta" placeholder="" required><br><br>
+				<label for="tarjeta" style="font-size: 14pt">Numero de tarjeta</label><br>
+				<td width=80>
+				<input type="text" style="border-radius:15px;" name="tarjeta"  placeholder="" required><br><br></td>
 				<label for="codigo">Codigo del estudiante</label><br>
-				<input type="text" name="codigo" placeholder="" required><br><br>
+				<input type="text" style="border-radius:15px;" name="codigo"  placeholder="" required><br><br>
 				<label for="nombres">Nombres</label><br>
 				<input type="text" name="nombres" placeholder="" required><br><br>
 				<label for="apellidos">Apellidos</label><br>
@@ -24,10 +25,26 @@
 				<input type="text" name="direccion" placeholder="" required><br><br>
 				<label for="telefono">Telefono</label><br>
 				<input type="text" name="telefono" placeholder="" required><br><br>
-				<label for="facultad">facultad</label><br>
-				<input type="text" name="facultad" placeholder="" required><br><br>
+				<label for="facultad">Facultad</label><br>
+				<select name="facultad" required>
+					<option>Ingeniería</option>
+					<option>Ciencias</option>
+					<option>Arquitectura</option>
+					<option>Ciencias de la Salud</option>
+				
+				</select><br><br>
+				<!--<input type="text" name="facultad" placeholder="" required><br><br>-->
 				<label for="escuela">Escuela</label><br>
-				<input type="text" name="escuela" placeholder="" required><br><br>
+				<select name="escuela">
+					<option>Esis</option>
+					<option>Esme</option>
+				</select>
+				<br>
+				<br>
+				<br>
+				
+
+				<!--<input type="text" name="escuela" placeholder="" required><br><br>-->
 				<input type="submit" value="Enviar">
 			</form>
 		</div>	
