--- a/admin_menu.html
+++ b/admin_menu.html
@@ -17,7 +17,7 @@
 						<nav id="nav">							
 							<ul>
 								<li><a href="ma_marcar_asistencia.php" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Marcar Asistencia</span></a></li>
-								<li><a href="ma_agregar_alumno.html" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Añadir Comensales</span></a></li>
+								<li><a href="ma_agregar_alumno.php" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Añadir Comensales</span></a></li>
 								<li><a href="ma_com_registrados.php" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">Comensales Registrados</span></a></li>
 								<li><a href="ma_ver_asistencia.php" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">Ver Asistencias</span></a></li>
 								<li><a href="ma_imprimir_reporte.php" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Imprimir Reportes</span></a></li>
@@ -27,11 +27,9 @@
 				</div>
 				<div class="bottom">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/unjbgtacna" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://web.facebook.com/UNJBG.ocim/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://mail.google.com/a/unjbg.edu.pe" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 				</div>
 			</div>
