--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<h1 id="logo"><a href="#">UNJBG</a></h1>
 					<nav id="nav">
 						<ul>							
-							<li class="current"><a href="admin_login.php">Administrador</a></li>
+							<li class="current"><a href="admin_login2.php">Administrador</a></li>
 							<li class="current"><a href="ma_ver_asistencia.php">Comensales</a></li>
 							<!--<li class="current"><a href="#">Informes</a></li>
 							<li><a href="#">Horarios</a></li>-->
